--- a/src/components/page-search/SearchPage.css
+++ b/src/components/page-search/SearchPage.css
@@ -1,3 +1,17 @@
+.searchPage__title--header {
+    font-style: italic;
+    font-weight: 900;
+    text-align: center;
+    animation: fadeIn 1s ease-in-out;
+}
+
+.searchPage__title--subheader {
+    font-style: italic;
+    font-weight: 400;
+    text-align: center;
+    animation: fadeIn 1s ease-in-out;
+  }
+
 .search__bar {
     padding-top: 20vh;
     width: 40%;
@@ -6,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     min-width: 200px;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .searchBar__wrapper {
@@ -17,10 +32,12 @@
     box-shadow: 0px 0px 8px #ddd;
     display: flex;
     align-items: center;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .searchBar__input--icon {
     color: royalblue;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .searchBar__input {
@@ -30,6 +47,7 @@
     font-size: 1.25rem;
     width: 100%;
     margin-left: 5px;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .searchBar__input:focus {
@@ -41,10 +59,12 @@
     background-color: transparent;
     border-radius: 5px;
     border-color: royalblue;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .searchBar__button--icon {
     color: royalblue;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .searchBar__results {
@@ -66,4 +86,12 @@
 .searchBar__result:hover {
     background-color: #efefef;
 }
-
+  
+@keyframes fadeIn {
+from {
+    opacity: 0;
+}
+to {
+    opacity: 1;
+}
+}
