--- a/src/components/page-airport-info/comments/AirportComments.css
+++ b/src/components/page-airport-info/comments/AirportComments.css
@@ -1,18 +1,74 @@
+.comments {
+    border: #aaa 1px solid;
+    width: 50vh;
+    padding: 1rem;
+}
+
+.comments__header {
+    margin: 1rem;
+    margin-top: 0;
+}
+
 .commentForm {
     display: flex;
     flex-direction: column;
 }
 
-.commentsBox {
+.comments__box {
     display: flex;
     flex-direction: column;
 }
 
-.comments__container{ 
+.comment__container { 
     border: black 1px solid;
     margin: 1rem;
     padding: 1rem;
 }
+
+.comment__nameAndDate {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+}
+
+.comment__comment {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.comment__commentEditMode {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.comment__starsAndEdit {
+    display: flex;
+    justify-content: space-between;
+}
+
+.comment__editAndDeleteButtons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1rem;
+}
+
+.comment__editButton,
+.comment__deleteButton {
+    margin-left: 1rem;
+    height: 25px;
+    width: 30px;
+    text-align: center;
+    background-color: #ddd;
+    border-radius: 3px;
+    border: 1px solid #eee;
+}
+
+.comment__editButton:hover,
+.comment__deleteButton:hover {
+    cursor: pointer;
+    background-color: #bbb;
+}
+
 .starButtonContainer{
     display: flex;
 }
@@ -21,7 +77,6 @@
     background-color: transparent;
     border: none;
     outline: none;
-    cursor: pointer;
     color: royalblue
 }
 
@@ -29,16 +84,33 @@
     background-color: transparent;
     border: none;
     outline: none;
+    color: #bbb
+}
+
+.starOnClick {
     cursor: pointer;
+    padding: .25rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: royalblue
+}
+
+.starOffClick {
+    cursor: pointer;
+    padding: .25rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
     color: #bbb
 }
 
 .commentForm__button {
+    cursor: pointer;
     font-size: medium;
     font-weight: 900;
     text-align: center;
-    background-color: #ccc;
-    padding: 0;
+    background-color: #ddd;
     border-radius: 3px;
     border: 1px solid #eee;
     height: 25px;
