--- a/src/components/SkyInsight.css
+++ b/src/components/SkyInsight.css
@@ -4,6 +4,66 @@
   background-color: #ecdac9;
 }
 
+/* .floatingHeader {
+  position: fixed;
+  top: 4%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  opacity: 0.95;
+  z-index: 3;
+  width: 25%;
+  min-width: 47px;
+  color: #273439;
+  background-color: #c3d1cd;
+  border-radius: 30px 30px 45px 45px;
+  padding: .25em;
+  padding-left: 0;
+  padding-right: 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: xx-large;
+  box-shadow: 0 0 10px 1px #7c7d84;
+} */
+
+.floatingHeader {
+  position: fixed;
+  right: 2%;
+  bottom: 5%;
+  height: 30%;
+  opacity: 0.95;
+  z-index: 3;
+  min-width: 47px;
+  color: #273439;
+  background-color: #e9c65d;
+  border-radius: 30px;
+  padding: .25em;
+  padding-left: 0;
+  padding-right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: xx-large;
+  box-shadow: 0 0 10px 1px #7c7d84;
+}
+
+.floatingHeader__icon {
+  transition: .25s;
+}
+
+.floatingHeader__icon:hover {
+  /* background-color: #9eaba7; */
+  background-color: #dbac1c;
+  /* padding: .1em; */
+  padding: .2em;
+  border-radius: 100%;
+}
+
+.headerAndMaps {
+  height: 100vh;
+}
+
 @keyframes fadeIn {
   from {
       opacity: 0;
@@ -12,49 +72,3 @@
       opacity: 1;
   }
 }
-
-/* leftover from create-react-app */
-
-
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-/* .form-group {
-  border: none;
-} */
