--- a/src/components/header/NavBar.css
+++ b/src/components/header/NavBar.css
@@ -7,12 +7,57 @@
     color: #273439;
 }
 
+.navbar__logoContainer {
+    max-width: 15%;
+}
+
 .navbar__logo {
-    width: 15%;
+    width: 100%;
+}
+
+.navbar__hamburger--closed,
+.navbar__hamburger--open {
+    position: relative;
+    display: inline-block;
+    margin-right: 1rem;
+    font-size: xx-large;
+    transition: .25s
+}
+
+.navbar__hamburger--closed {
+    color: #ecdac9;
+}
+
+.navbar__hamburger--open {
+    color: #273439;
 }
 
 .navbar__links {
+    display: block;
+    position: absolute;
+    top: 6%;
+    right: 1.5%;
+    z-index: 1;
+    width: 8%;
+    background-color: #fbf9f7;
+    color: #273439;
+    font-size: larger;
+    box-shadow: 3px 3px 10px #273439;
+    padding: 1rem;
+    border-radius: 5px;
+    animation: fadeIn .25s ease-in-out
+}
+
+.navbar__link {
     display: flex;
-    width: 30%;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+}
+
+.navbar__link:hover {
+    background-color: #e39776;
 }
