--- a/src/components/page-airport-info/header-info/AirportHeader.css
+++ b/src/components/page-airport-info/header-info/AirportHeader.css
@@ -2,6 +2,7 @@
     text-align: center;
     position: relative;
     animation: fadeIn 1s ease-in-out;
+    background-color: #ecdac9;
 }
 
 .loadingGraphic {
@@ -10,6 +11,7 @@
     left: 50vh;
     height: 100vh;
     transform: translate(-50%, -50%);
+    background-color: #e5c2a9;
 }
 
 .title__container {
