--- a/src/components/page-airport-info/maps/AirportMaps.css
+++ b/src/components/page-airport-info/maps/AirportMaps.css
@@ -35,7 +35,7 @@
     left: 0;
     width: 100%;
     height: 30%;
-    background: linear-gradient(to top, #ecdac9, rgba(255, 255, 255, 0));
+    background: linear-gradient(to top, #e5c2a9, rgba(255, 255, 255, 0));
     pointer-events: none;
 }
 
