weather component styled

--- a/src/components/page-airport-info/header-info/AirportHeader.css
+++ b/src/components/page-airport-info/header-info/AirportHeader.css
@@ -56,10 +56,13 @@
     color: #dbac1c;
 }
 
-.favorite__button--add:hover,
+.favorite__button--add:hover {
+    color: #a27f15;
+    cursor: cell;
+}
+
 .favorite__button--remove:hover {
     color: #a27f15;
-    cursor: pointer;
 }
 
 .modal__invisible {
