--- a/src/components/page-airport-info/runways/AirportRunways.css
+++ b/src/components/page-airport-info/runways/AirportRunways.css
@@ -1,3 +1,5 @@
+/* airport__runways styled in AirportFrequencies.css */
+
 .runway__container {
     display: flex;
     /* justify-content: space-between; */
