--- a/src/components/SkyInsight.css
+++ b/src/components/SkyInsight.css
@@ -1,5 +1,16 @@
 /* apply css styling to large component blocks. e.g., to "Airport Comments" */
 
+/* Meyer Reset */
+.form-group, .form__link, html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
 .airportPage {
   position: relative;
   background-color: #e5c2a9;
