--- a/src/components/header/NavBar.css
+++ b/src/components/header/NavBar.css
@@ -25,7 +25,9 @@
     display: inline-block;
     margin-right: 1rem;
     font-size: xx-large;
-    transition: .25s
+    transition: .25s;
+    background: transparent;
+    border: none;
 }
 
 .navbar__hamburger--closed {
@@ -65,6 +67,8 @@
     padding-bottom: .25rem;
     padding-left: .5rem;
     padding-right: .75rem;
+    text-decoration: none;
+    color: #273439;
 }
 
 .navbar__link:hover {
