--- a/src/components/page-search/SearchPage.css
+++ b/src/components/page-search/SearchPage.css
@@ -1,17 +1,3 @@
-/* .searchPage {
-    background: linear-gradient(to bottom,
-    #e39776 0%, #e39776 5%,
-    #e38260 5%, #e38260 9%,
-    #ecdac9 9%, #ecdac9 31%,
-    #c3d1cd 32%, #c3d1cd 49%,
-    #e5c2a9 51%, #e5c2a9 67%,
-    #e39776 67%, #e39776 77%,
-    #d3846d 77%, #d3846d 80%,
-    #7c7d84 80%, #7c7d84 95%,
-    #273439 95%, #273439 100%);
-    height: 92vh;
-} */
-
 .searchPage {
     height: 92vh;
     background: linear-gradient(to bottom,
@@ -71,12 +57,13 @@
     align-items: center;
     min-width: 200px;
     animation: fadeIn 1.5s ease-in-out;
+    position: relative;
 }
 
 .searchBar__wrapper {
     background-color: #fbf9f7;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 50px;
     height: 2.5rem;
     padding: 0 15px;
     box-shadow: 0px 0px 8px #ddd;
@@ -90,7 +77,7 @@
 }
 
 .searchBar__input--icon {
-    color: #e38260;
+    color: #e39776;
     font-size: large;
 }
 
@@ -109,22 +96,27 @@
 
 .searchBar__button {
     cursor: pointer;
+    margin: 1rem;
+    font-size: xx-large;
+    font-weight: 900;
+    font-style: italic;
     text-align: center;
     background-color: transparent;
     border-radius: 5px;
-    border-color: #e38260;
+    border: none;
+    background-color: #e38260;
+    color: #fbf9f7;
+    padding: 1rem;
+    padding-top: .5rem;
+    padding-bottom: .75rem;
 }
 
 .searchBar__button:hover {
-    background-color: #eee;
-}
-
-.searchBar__button--icon {
-    color: #e38260;
-    font-size: large;
+    background-color: #e39776;
 }
 
 .searchBar__results {
+    top: 20%;
     width: 100%;
     background-color: #fbf9f7;
     display: flex;
@@ -133,7 +125,8 @@
     border-radius: 10px;
     margin-top: 1rem;
     max-height: 220px;
-    overflow-y: scroll
+    overflow-y: scroll;
+    position: absolute;
 }
 
 .searchBar__result {
