--- a/src/components/SkyInsight.css
+++ b/src/components/SkyInsight.css
@@ -65,9 +65,7 @@
 }
 
 .floatingHeader__icon:hover {
-  /* background-color: #9eaba7; */
   background-color: #cbcbcb;
-  /* padding: .1em; */
   padding: .2em;
   border-radius: 100%;
 }
@@ -80,18 +78,41 @@
 
 .freqsRunwaysNotams {
   display: flex;
+  justify-content: space-evenly;
+  align-content: flex-start;
+  /* align-items: center; */
+}
+
+.dataContainer {
+  display: flex;
   flex-direction: column;
   align-items: center;
+  width: 20%;
+  height: 78vh;
 }
 
-.freqsRunwaysContainer {
-  width: 100%;
+.dataContainer.runwaysNotams {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
+  height: 78vh;
 }
 
-.airport__notams {
-  margin: 3rem;
+.notams__button {
+  background-color: #e38260;
+  color:#fbf9f7;
+  border: none;
+  border-radius: 20px;
+  padding: 1.5rem;
+  font-size: x-large;
+  position: relative;
+  z-index: 1;
+  transition: .25s;
+}
+
+.notams__button:hover {
+  background-color: #e1734a;
+  box-shadow: 1px 1px 2px #273439;
 }
 
 @keyframes fadeIn {
