--- a/src/components/SkyInsight.css
+++ b/src/components/SkyInsight.css
@@ -72,47 +72,22 @@
 
 .headerAndMaps,
 .weather,
-.freqsRunwaysNotams {
+.freqsRunwaysNotams,
+.airportDocs {
   height: 100vh;
 }
 
 .freqsRunwaysNotams {
   display: flex;
   justify-content: space-evenly;
-  align-content: flex-start;
-  /* align-items: center; */
+  align-items: flex-start;
 }
 
-.dataContainer {
+.airportDocs {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 20%;
-  height: 78vh;
-}
-
-.dataContainer.runwaysNotams {
-  display: flex;
-  flex-direction: column;
   justify-content: space-evenly;
-  height: 78vh;
-}
-
-.notams__button {
-  background-color: #e38260;
-  color:#fbf9f7;
-  border: none;
-  border-radius: 20px;
-  padding: 1.5rem;
-  font-size: x-large;
-  position: relative;
-  z-index: 1;
-  transition: .25s;
-}
-
-.notams__button:hover {
-  background-color: #e1734a;
-  box-shadow: 1px 1px 2px #273439;
+  align-content: center;
+  /* padding-top: -8rem; */
 }
 
 @keyframes fadeIn {
