--- a/src/components/page-airport-info/frequencies/AirportFrequenciesRunwaysNotams.css
+++ b/src/components/page-airport-info/frequencies/AirportFrequenciesRunwaysNotams.css
@@ -1,3 +1,20 @@
+.dataContainer {
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+    height: 78vh;
+}
+  
+.dataContainer.runwaysNotams {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 78vh;
+}
+
 .airport__frequencies,
 .airport__runways {
     width: 100%;
@@ -41,3 +58,19 @@
     font-style: italic;
 }
 
+.notams__button {
+    background-color: #e38260;
+    color:#fbf9f7;
+    border: none;
+    border-radius: 20px;
+    padding: 1.5rem;
+    font-size: x-large;
+    position: relative;
+    z-index: 1;
+    transition: .25s;
+  }
+  
+  .notams__button:hover {
+    background-color: #e1734a;
+    box-shadow: 1px 1px 2px #273439;
+  }
